--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -139,3 +139,13 @@ label {
   background-color: #FF3860;
   color: #ffffff;
 }
+
+.shadow-item {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  height: 30px;
+}
+
+.shadow-item:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  transform: scale(1.5);
+}
