--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -12,7 +12,7 @@
     --bs-white: #fff !important;
     --bs-gray: #6c757d !important;
     --bs-gray-dark: #343a40 !important;
-    --bs-primary: #0d6efd !important;
+    --bs-primary: #8e165e !important;
     --bs-secondary: #6c757d !important;
     --bs-success: #198754 !important;
     --bs-info: #0dcaf0 !important;
